--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -101,7 +101,10 @@ Home {%endblock%} {% block head %}
 
     <div class="d-flex justify-content-center">
       <div id="compound-form-container" style="display: none">
-        <i class="fa-sharp fa-regular fa-circle-xmark"></i>
+        <i
+          class="fa-sharp fa-regular fa-circle-xmark fa-lg"
+          id="close-compound"
+        ></i>
         <form
           id="compound-form"
           action="{% url 'add_component' %}"
@@ -126,7 +129,10 @@ Home {%endblock%} {% block head %}
 
     <div class="d-flex justify-content-center">
       <div id="relation-form-container" style="display: none">
-        <i class="fa-sharp fa-regular fa-circle-xmark"></i>
+        <i
+          class="fa-sharp fa-regular fa-circle-xmark fa-lg"
+          id="close-relation"
+        ></i>
         <form
           id="relation-form"
           action="{% url 'add_relation' %}"
