--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
@@ -11,148 +11,176 @@
         cursor: pointer;
         font-size: 24px;
       }
+      .table-container {
+        height: 300px;
+        overflow-y: scroll;
+      }
+
+      table {
+        border-collapse: collapse;
+        width: 100%;
+      }
+      th,
+      td {
+        text-align: left;
+        padding: 8px;
+      }
+      th {
+        position: sticky;
+        top: 0;
+        font-weight: bold;
+      }
+      .compound-table-header,
+      .binary-relations-table-header {
+        position: sticky;
+        top: 0;
+        font-weight: bold;
+        z-index: 1;
+      }
+      .table-container h2 {
+        position: sticky;
+        font-weight: bold;
+        z-index: 1;
+      }
     </style>
   </head>
-  <div class="table-container">
-    <h2 id="table">Compounds for Antoine model</h2>
-    <form method="GET" action="{% url 'tables' %}">
-      <input
-        type="text"
-        id="compound-filter"
-        name="component_query"
-        value="{{ component_query }}"
-        placeholder="Search for a compound..."
+  <html>
+    <head>
+      <meta charset="UTF-8" />
+      <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
       />
-      <button type="submit">Search</button>
-      <button type="button" onclick="resetForm()">Reset</button>
-    </form>
-    <br />
-    <table id="compound-table">
-      <thead>
-        <tr>
-          {% for key in component_keys %}
-          <th>{{key}}</th>
-          {% endfor %}
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for element in components|slice:":5" %}
-        <tr>
-          <td>{{ element.id }}</td>
-          <td>{{ element.name }}</td>
-          <td>{{ element.a }}</td>
-          <td>{{ element.b }}</td>
-          <td>{{ element.c }}</td>
-          <td>
-            <i
-              class="fa-solid fa-trash"
-              onclick="Delete('{{element.id}}', '{{element.name}}')"
-            ></i>
-          </td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
-  
-  <div class="table-container">
-    <h2 id="table">Binary relations</h2>
-    <form method="GET" action="{% url 'tables' %}">
-      <input
-        type="text"
-        id="search"
-        name="relation_query"
-        value="{{ relation_query }}"
-        onkeyup="perform_search()"
-        placeholder="Search for compounds..."
-      />
-      <button type="submit">Search</button>
-      <button type="button" onclick="resetForm()">Reset</button>
-    </form>
-    <br />
-    <table id="binary-relations-table">
-      <thead>
-        <tr>
-          {% for key in relation_keys %}
-          <th>{{key}}</th>
-          {% endfor %}
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for element in relations|slice:":5" %}
-        <tr>
-          <td>{{ element.id }}</td>
-          <td>{{ element.component1.name }}</td>
-          <td>{{ element.component2.name }}</td>
-          <td>{{ element.a12 }}</td>
-          <td>{{ element.a21 }}</td>
-          <td>{{ element.alpha }}</td>
-          <td>
-            <i
-              class="fa-solid fa-trash"
-              onclick="Delete('{{element.id}}', '{{element.name}}')"
-            ></i>
-          </td>
-          </tr>
-          {% endfor %}
+    </head>
+    <body>
+      <div class="table-container">
+        <h2 id="table">Compounds for Antoine model</h2>
+        <input
+          type="text"
+          id="compound-filter"
+          placeholder="Search for a compound..."
+        /><br /><br />
+        <table id="compound-table">
+          <thead>
+            <tr>
+              {% for key in component_keys %}
+              <th>{{key}}</th>
+              {% endfor %}
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for element in components %}
+            <tr>
+              <td>{{ element.id }}</td>
+              <td>{{ element.name }}</td>
+              <td>{{ element.a }}</td>
+              <td>{{ element.b }}</td>
+              <td>{{ element.c }}</td>
+              <td>
+                <i
+                  class="fa-solid fa-trash"
+                  onclick="Delete('{{element.id}}', '{{element.name}}')"
+                ></i>
+              </td>
+            </tr>
+            {% endfor %}
           </tbody>
-            </table>
-          </div>
-<script type="text/javascript">
-            // Get the input field and table
-            let filterInput = document.getElementById("compound-filter");
-            let table = document.getElementById("compound-table");
-      
-            // Add event listener for input
-            filterInput.addEventListener("keyup", function () {
-              let filterValue = filterInput.value.toLowerCase();
-      
-              // Loop through table rows
-              for (let i = 1; i < table.rows.length; i++) {
-                let row = table.rows[i];
-                let name = row.cells[1].innerText.toLowerCase();
-      
-                if (name.indexOf(filterValue) > -1) {
-                  row.style.display = "";
-                } else {
-                  row.style.display = "none";
-                }
-              }
-            });
-      
-            function perform_search() {
-              var input, filter, table, tr, td, i, txtValue;
-              input = document.getElementById("search");
-              filter = input.value.toUpperCase();
-              table = document.getElementById("binary-relations-table");
-              tr = table.getElementsByTagName("tr");
-              for (i = 0; i < tr.length; i++) {
-                td1 = tr[i].getElementsByTagName("td")[1];
-                td2 = tr[i].getElementsByTagName("td")[2];
-                if (td1 || td2) {
-                  txtValue1 = td1.textContent || td1.innerText;
-                  txtValue2 = td2.textContent || td2.innerText;
-                  if (
-                    txtValue1.toUpperCase().indexOf(filter) > -1 ||
-                    txtValue2.toUpperCase().indexOf(filter) > -1
-                  ) {
-                    tr[i].style.display = "";
-                  } else {
-                    tr[i].style.display = "none";
-                  }
-                }
-              }
+        </table>
+      </div>
+  
+      <div class="table-container">
+        <h2 id="table">Binary relations</h2>
+        <input
+          type="text"
+          id="search"
+          onkeyup="perform_search()"
+          placeholder="Search for compounds..."
+        />
+        <table id="binary-relations-table">
+          <thead>
+            <tr>
+              {% for key in relation_keys %}
+              <th>{{key}}</th>
+              {% endfor %}
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for element in relations %}
+            <tr>
+              <td>{{ element.id }}</td>
+              <td>{{ element.component1.name }}</td>
+              <td>{{ element.component2.name }}</td>
+              <td>{{ element.a12 }}</td>
+              <td>{{ element.a21 }}</td>
+              <td>{{ element.alpha }}</td>
+              <td>
+                <i
+                  class="fa-solid fa-trash"
+                  onclick="Delete('{{element.id}}', '{{element.name}}')"
+                ></i>
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+  
+
+    <script type="text/javascript">
+      // Get the input field and table
+      let filterInput = document.getElementById("compound-filter");
+      let table = document.getElementById("compound-table");
+
+      // Add event listener for input
+      filterInput.addEventListener("keyup", function () {
+        let filterValue = filterInput.value.toLowerCase();
+
+        // Loop through table rows
+        for (let i = 1; i < table.rows.length; i++) {
+          let row = table.rows[i];
+          let name = row.cells[1].innerText.toLowerCase();
+
+          if (name.indexOf(filterValue) > -1) {
+            row.style.display = "";
+          } else {
+            row.style.display = "none";
+          }
+        }
+      });
+
+      function perform_search() {
+        var input, filter, table, tr, td, i, txtValue;
+        input = document.getElementById("search");
+        filter = input.value.toUpperCase();
+        table = document.getElementById("binary-relations-table");
+        tr = table.getElementsByTagName("tr");
+        for (i = 0; i < tr.length; i++) {
+          td1 = tr[i].getElementsByTagName("td")[1];
+          td2 = tr[i].getElementsByTagName("td")[2];
+          if (td1 || td2) {
+            txtValue1 = td1.textContent || td1.innerText;
+            txtValue2 = td2.textContent || td2.innerText;
+            if (
+              txtValue1.toUpperCase().indexOf(filter) > -1 ||
+              txtValue2.toUpperCase().indexOf(filter) > -1
+            ) {
+              tr[i].style.display = "";
+            } else {
+              tr[i].style.display = "none";
             }
-            function Delete(id, name) {
+          }
+        }
+      }
+      function Delete(id, name) {
               if (window.confirm("Are you sure you want to delete " + name)) {
                 var path = "delete_tables/" + id;
                 document.location.href = path;
               }
             }
-            function resetForm() {
-              window.location.href = "/";
-            }
-</script>
+      
+    </script>
+    </body>
 </html>
+  
