--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
@@ -135,7 +135,7 @@
       }
       function Delete(id, name) {
         if (window.confirm("Are you sure you want to delete " + name)) {
-          var path = "delete_tables/" + id;
+          var path = "delete_compound/" + id;
           document.location.href = path;
         }
       }
