--- a/backend_django/static/table.css
+++ b/backend_django/static/table.css
@@ -1,4 +1,3 @@
-/* Style pour la barre de navigation */
 nav {
   background-color: #333;
   overflow: hidden;
@@ -18,14 +17,6 @@ nav a:hover {
   color: black;
 }
 
-/* Style pour les tableaux */
-table {
-  border-collapse: collapse;
-  width: 80%;
-  max-width: 800px;
-  margin: auto;
-
-}
 
 th,
 td {
@@ -51,15 +42,17 @@ tr:nth-child(even) {
 }
 
 .table-container {
-  margin-top: 50px;
+  margin-bottom: 30px;
   align-self: center;
-  height: 300px;
+  height: 270px;
   overflow-y: scroll;
+
 }
 
 table {
   border-collapse: collapse;
   width: 100%;
+  margin-top: 10px;
 }
 
 th,
