--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
@@ -76,7 +76,7 @@
               <td>
                 <i
                   class="fa-solid fa-trash"
-                  onclick="Delete('{{element.id}}', '{{element.name}}')"
+                  onclick="Delete_relation('{{element.id}}', '{{element.component1.name}}', '{{element.component2.name}}')"
                 ></i>
               </td>
             </tr>
