--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
@@ -58,12 +58,20 @@
     },
   ];
 
-  function createXYValues(x, y) {
+  function createXYValues(x, y, t) {
     xyValues = [];
+    pos = "inside";
     for (var i = 0; i < x.length; i++) {
-      xyValues.push({ x: x[i], y: y[i] });
+      xyValues.push({ x: x[i], y: y[i], t: t[i] });
     }
     return xyValues;
+  }
+
+  function addPrefixToCurves(curves) {
+    for (let i = 0; i < curves.length; i++) {
+      curves[i] = "T : " + curves[i];
+    }
+    return curves;
   }
 
   function draw() {
@@ -77,7 +85,9 @@
     for (var i = 0; i < curve_list.length; i++) {
       x = curve_list[i]["x1"];
       y = curve_list[i]["x2"];
-      xyValues = createXYValues(x, y);
+      t = addPrefixToCurves(curve_list[i]["T"]);
+      xyValues = createXYValues(x, y, t);
+      console.log(xyValues);
 
       datasets.push({
         data: xyValues,
@@ -89,6 +99,7 @@
     new Chart(ctx, {
       type: "scatter",
       data: {
+        labels: t,
         datasets: datasets,
       },
       options: {
@@ -107,6 +118,14 @@
             top: 50,
             bottom: 50,
           },
+        },
+        tooltips: {
+          mode: "index",
+          intersect: false,
+        },
+        hover: {
+          mode: "nearest",
+          intersect: true,
         },
       },
     });
