--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
@@ -69,7 +69,7 @@
 
   function addPrefixToCurves(curves) {
     for (let i = 0; i < curves.length; i++) {
-      curves[i] = "T : " + curves[i];
+      curves[i] = "T : " + curves[i] + "°C";
     }
     return curves;
   }
