--- a/backend_django/static/index.css
+++ b/backend_django/static/index.css
@@ -153,7 +153,6 @@ select {
 
 .title {
   color: #26408B;
-  text-transform: uppercase;
   font-size: 30px;
   letter-spacing: 2px;
   position: relative;
@@ -283,4 +282,9 @@ select {
   background-color: #007bff;
   color: #fff;
   border-color: #007bff;
+}
+
+
+.fa-square-question {
+  color: rgba(154, 197, 230, 0.767);
 }
