--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -119,9 +119,9 @@ Home {%endblock%} {% block head %}
             required
           />
 
-          <input type="number" id="a-input" placeholder="A" name="a" required />
-          <input type="number" id="b-input" name="b" placeholder="B" required />
-          <input type="number" id="c-input" name="c" placeholder="C" required />
+          <input type="number" step="any" id="a-input" name="a" placeholder="A" required />
+          <input type="number" step="any" id="b-input" name="b" placeholder="B" required />
+          <input type="number" step="any" id="c-input" name="c" placeholder="C" required />
           <input type="submit" value="Save" class="btn btn-primary" />
         </form>
       </div>
