--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
@@ -6,142 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Compounds and Binary Relations</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <style>
-    * {
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }
-
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #f2f2f2;
-    }
-
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 20px;
-    }
-
-    .search-container {
-      margin-top: 50px;
-      text-align: center;
-    }
-
-    .search-container input[type="text"] {
-      padding: 10px;
-      margin-bottom: 10px;
-      border: none;
-      border-radius: 4px;
-      width: 100%;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-      font-size: 16px;
-      background-color: #f5f5f5;
-      color: #333;
-      transition: width 0.3s ease-in-out;
-    }
-
-    input[type="text"]:focus {
-      outline: none;
-      box-shadow: 0 0 8px rgba(81, 203, 238, 0.8);
-      width: 20%;
-    }
-
-    .table-container {
-      margin-top: 20px;
-    }
-
-    .table {
-      width: 100%;
-      border-collapse: collapse;
-      margin: 20px 0;
-      background-color: white;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    }
-
-    .table thead th {
-      background-color: #333;
-      color: white;
-      font-weight: bold;
-      text-align: left;
-      padding: 12px;
-    }
-
-    .table tbody td {
-      text-align: left;
-      padding: 12px;
-      border-bottom: 1px solid #ddd;
-    }
-
-    .table tbody td:last-child {
-      text-align: center;
-    }
-
-    .fa-trash {
-      color: red;
-      cursor: pointer;
-    }
-
-    .fa-trash:hover {
-      color: darkred;
-    }
-
-    .text-center {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .actions {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .actions .fa {
-      margin: 0 5px;
-      font-size: 20px;
-      cursor: pointer;
-    }
-
-    .actions .fa:hover {
-      color: #333;
-    }
-
-    h1,
-    h2 {
-      margin-top: 30px;
-      margin-bottom: 10px;
-      font-weight: bold;
-      color: #333;
-      text-align: center;
-    }
-
-    input[type="text"] {
-      padding: 10px;
-      margin-bottom: 10px;
-      border: none;
-      border-radius: 4px;
-      width: 100%;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-      font-size: 16px;
-      background-color: #f5f5f5;
-      color: #333;
-    }
-
-    input[type="text"]:focus {
-      outline: none;
-      box-shadow: 0 0 8px rgba(81, 203, 238, 0.8);
-    }
-  </style>
 </head>
 
 <body>
   <div class="container">
-    <h1>Compounds and Binary Relations</h1>
     <div class="search-container">
-      <input type="text" id="search" onkeyup="perform_search()" placeholder="Search for a compound...">
+      <input type="text" id="search" onkeyup="perform_search()" placeholder="Search ...">
     </div>
     <h2>Compounds for Antoine model</h2>
     <input type="text" id="compound-filter" placeholder="Search for a compound...">
