tables script in a seperate file + putting css files in diretory css

--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/layout.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/layout.html
@@ -10,8 +10,12 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" type="text/css" href="{% static 'menu.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'table.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/menu.css' %}" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'css/table.css' %}"
+    />
     <script
       type="text/javascript"
       src="{% static 'js/menu.js' %}"
