--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -7,7 +7,7 @@ Home {%endblock%} {% block head %}
   src="{% static 'js/index.js'%}"
   charset="utf-8"
 ></script>
-<link rel="stylesheet" type="text/css" href="{% static 'menu.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/menu.css' %}" />
 <script
   type="text/javascript"
   src="{% static 'js/menu.js' %}"
