--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+{% load static %}
 
+
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Compounds and Binary Relations</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script type="text/javascript" src="{% static 'js/table.js' %}"></script>
 </head>
 
 <body>
@@ -14,7 +16,7 @@
       <input type="text" id="search" onkeyup="perform_search()" placeholder="Search ...">
     </div>
     <h2>Compounds for Antoine model</h2>
-    <input type="text" id="compound-filter" placeholder="Search for a compound...">
+    <input type="text" id="compound-filter" placeholder="Search for a compound..." onkeyup="perform_compound_search()" >
     <div class="table-container">
       <table id="compound-table">
         <thead>
@@ -41,6 +43,7 @@
         </tbody>
       </table>
     </div>
+
     <h2>Binary relations for NRTL model</h2>
     <input type="text" id="binary-relations-search" onkeyup="perform_binary_relations_search()"
       placeholder="Search in binary relations...">
@@ -72,111 +75,5 @@
         </tbody>
       </table>
     </div>
-
-    <script type="text/javascript">
-      // Get the input field and table
-      let filterInput = document.getElementById("compound-filter");
-      let table = document.getElementById("compound-table");
-
-      // Add event listener for input
-      filterInput.addEventListener("keyup", function () {
-        let filterValue = filterInput.value.toLowerCase();
-
-        // Loop through table rows
-        for (let i = 1; i < table.rows.length; i++) {
-          let row = table.rows[i];
-          let name = row.cells[1].innerText.toLowerCase();
-
-          if (name.indexOf(filterValue) > -1) {
-            row.style.display = "";
-          } else {
-            row.style.display = "none";
-          }
-        }
-      });
-
-      function perform_search() {
-        var input, filter, table1, table2, tr, td1, td2, i, txtValue;
-        input = document.getElementById("search");
-        filter = input.value.toUpperCase();
-        table1 = document.getElementById("compound-table");
-        table2 = document.getElementById("binary-relations-table");
-        tr1 = table1.getElementsByTagName("tr");
-        tr2 = table2.getElementsByTagName("tr");
-        for (i = 0; i < tr1.length; i++) {
-          td1 = tr1[i].getElementsByTagName("td")[1];
-          if (td1) {
-            txtValue = td1.textContent || td1.innerText;
-            if (txtValue.toUpperCase().indexOf(filter) > -1) {
-              tr1[i].style.display = "";
-            } else {
-              tr1[i].style.display = "none";
-            }
-          }
-        }
-        for (i = 0; i < tr2.length; i++) {
-          td1 = tr2[i].getElementsByTagName("td")[1];
-          td2 = tr2[i].getElementsByTagName("td")[2];
-          if (td1 || td2) {
-            txtValue1 = td1.textContent || td1.innerText;
-            txtValue2 = td2.textContent || td2.innerText;
-            if (
-              txtValue1.toUpperCase().indexOf(filter) > -1 ||
-              txtValue2.toUpperCase().indexOf(filter) > -1
-            ) {
-              tr2[i].style.display = "";
-            } else {
-              tr2[i].style.display = "none";
-            }
-          }
-        }
-      }
-
-      function perform_binary_relations_search() {
-        var input, filter, table, tr, td1, td2, i, txtValue1, txtValue2;
-        input = document.getElementById("binary-relations-search");
-        filter = input.value.toUpperCase();
-        table = document.getElementById("binary-relations-table");
-        tr = table.getElementsByTagName("tr");
-        for (i = 0; i < tr.length; i++) {
-          td1 = tr[i].getElementsByTagName("td")[1];
-          td2 = tr[i].getElementsByTagName("td")[2];
-          if (td1 || td2) {
-            txtValue1 = td1.textContent || td1.innerText;
-            txtValue2 = td2.textContent || td2.innerText;
-            if (
-              txtValue1.toUpperCase().indexOf(filter) > -1 ||
-              txtValue2.toUpperCase().indexOf(filter) > -1
-            ) {
-              tr[i].style.display = "";
-            } else {
-              tr[i].style.display = "none";
-            }
-          }
-        }
-      }
-
-
-      function Delete(id, name) {
-        if (window.confirm("Are you sure you want to delete " + name)) {
-          var path = "delete_compound/" + id;
-          document.location.href = path;
-        }
-      }
-      function Delete_relation(id, name1, name2) {
-        if (
-          window.confirm(
-            "Are you sure you want to delete the relation " +
-            name1 +
-            "-" +
-            name2
-          )
-        ) {
-          var path = "delete_relation/" + id;
-          document.location.href = path;
-        }
-      }
-    </script>
 </body>
-
 </html>
