--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
@@ -9,7 +9,7 @@
   <title>Compounds and Binary Relations</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="text/javascript" src="{% static 'js/table.js' %}"></script>
-  <link rel="stylesheet" href="{% static 'css/table.css' %}"
+  <link rel="stylesheet" href="{% static 'css/table.css' %}">
 
 </head>
 
@@ -17,10 +17,10 @@
 <body>
   <div class="container">
     <div class="search-container">
-      <input type="text" id="search" onkeyup="perform_search()" placeholder="Search ...">
+      <input type="text" id="search" onkeyup="perform_search()" placeholder="&#xF002; Search" class="fontAwesome">
     </div>
     <h2>Compounds for Antoine model</h2>
-    <input type="text" id="compound-filter" placeholder="Search for a compound..." onkeyup="perform_compound_search()" >
+    <input type="text" id="compound-filter" placeholder="&#xF002; Search for a compound..." onkeyup="perform_compound_search()" class="fontAwesome">
     <div class="table-container">
       <table id="compound-table">
         <thead>
@@ -40,10 +40,14 @@
           <td editable="false">{{ element.b }}</td>
           <td editable="false">{{ element.c }}</td>
           <td editable="false">
+            {% if element.sessions.all|length > 0%}
             <i class="fas fa-pencil-alt" onclick="toggleEdit('component-row{{ forloop.counter }}')"></i>
             <i class="fa-solid fa-floppy-disk" onclick="saveChanges('component-row{{ forloop.counter }}')" class="save-row"></i>
             <i class="fas fa-times-circle" onclick="cancelChanges('component-row{{ forloop.counter }}')" class="cancel-button"></i>
             <i class="fa-solid fa-trash" onclick="Delete('{{element.id}}', '{{element.name}}')"></i>
+            {% else %}
+            <i class="fa-sharp fa-regular fa-ban">
+            {% endif %}
           </td>
 
         </tr>
@@ -55,7 +59,7 @@
 
   <h2>Binary relations for NRTL model</h2>
     <input type="text" id="binary-relations-search" onkeyup="perform_binary_relations_search()"
-      placeholder="Search in binary relations...">
+    placeholder="&#xF002; Search for binary relation" class="fontAwesome">
     <div class="table-container">
       <table id="binary-relations-table">
         <thead>
@@ -80,11 +84,15 @@
 
 
           <td editable="false">
+            {% if element.sessions.all|length > 0%}
             <i class="fas fa-pencil-alt" onclick="toggleEdit('relation-row{{ forloop.counter }}')"></i>
             <i class="fas fa-times-circle" onclick="cancelChanges('relation-row{{ forloop.counter }}')" class="cancel-button"></i>
             <i class="fa-solid fa-floppy-disk" onclick="saveChanges('relation-row{{ forloop.counter }}')" class="save-row"></i>
             <i class="fa-solid fa-trash"
               onclick="Delete_relation('{{element.id}}', '{{element.component1.name}}', '{{element.component2.name}}')"></i>
+            {% else %}
+            <i class="fa-sharp fa-regular fa-ban">
+            {% endif %}
           </td>
 
         </tr>
