added id for compounds in relations table in order to differentiate between compounds with the same name

--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
@@ -76,8 +76,8 @@
         {% for element in relations %}
         <tr id="relation-row{{ forloop.counter }}">
           <td noneditable="true">{{ element.id }}</td>
-          <td editable="false">{{ element.component1.name }}</td>
-          <td editable="false">{{ element.component2.name }}</td>
+          <td editable="false">{{ element.component1.name }} (ID : {{element.component1.id}})</td>
+          <td editable="false">{{ element.component2.name }} (ID : {{element.component2.id}})</td>
           <td editable="false">{{ element.a12 }}</td>
           <td editable="false">{{ element.a21 }}</td>
           <td editable="false">{{ element.alpha }}</td>
